Improve MD look.

--- a/src/app/protected/cranix/devices/lists/devices.component.html
+++ b/src/app/protected/cranix/devices/lists/devices.component.html
@@ -89,8 +89,8 @@
         <ion-button fill="clear" (click)="redirectToDelete(object)">
           <ion-icon color="danger" name="trash-outline"></ion-icon>
         </ion-button>
-        <ion-button fill="clear" (click)="redirectToEdit(object)">
-          <ion-icon name="build-sharp"></ion-icon>
+        <ion-button fill="clear" (click)="setPrinters(object)">
+          <ion-icon name="print"></ion-icon>
         </ion-button>
         <ion-button fill="clear" (click)="openActions($event,object)">
           <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
