--- a/src/app/protected/cranix/mygroups/mygroups.page.html
+++ b/src/app/protected/cranix/mygroups/mygroups.page.html
@@ -96,11 +96,11 @@
         <ion-button fill="clear" (click)="redirectToDelete(object)">
           <ion-icon color="danger" name="trash-outline"></ion-icon>
         </ion-button>
-        <ion-button fill="clear" (click)="redirectToMembers(object)">
+        <ion-button fill="clear" *ngIf="segment == 'group'" (click)="redirectToMembers(object)">
           <ion-icon name="people-circle"></ion-icon>
         </ion-button>
-        <ion-button fill="clear" (click)="redirectToEdit(object)">
-          <ion-icon name="build-sharp"></ion-icon>
+        <ion-button fill="clear" (click)="openActions(object)">
+          <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
         </ion-button>
       </ion-item-options>
     </ion-item-sliding>
