--- a/src/app/protected/cranix/rooms/lists/rooms.component.html
+++ b/src/app/protected/cranix/rooms/lists/rooms.component.html
@@ -87,14 +87,11 @@
           <ion-icon color="danger" name="trash-outline"></ion-icon>
         </ion-button>
         <ion-button fill="clear" (click)="setPrinters(object)">
-          <ion-icon color="print" name="server"></ion-icon>
+          <ion-icon name="print"></ion-icon>
         </ion-button>
         <ion-button fill="clear" (click)="devices(object)">
           <ion-icon name="desktop"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" (click)="redirectToEdit(object)">
-          <ion-icon name="build-sharp"></ion-icon>
-        </ion-button>
+        </ion-button>>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
