--- a/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
+++ b/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
@@ -19,119 +19,115 @@
         </ion-button>
       </ion-buttons>
     </ion-toolbar>
+    <ion-segment (ionChange)="segmentChanged($event)" [disabled]="submitted" color="secondary" value="overview">
+      <ion-segment-button value="overview">
+        <ion-label>{{'Overview' | translate}}</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="selectObjects">
+        <ion-label>{{'Select objects' | translate}}</ion-label>
+      </ion-segment-button>
+    </ion-segment>
   </ion-header>
-  <ion-card>
-    <ion-card-header>
-      <ion-segment (ionChange)="segmentChanged($event)" [disabled]="submitted" color="secondary" value="overview">
-        <ion-segment-button value="overview">
-          <ion-label>{{'Overview' | translate}}</ion-label>
-        </ion-segment-button>
-        <ion-segment-button value="selectObjects">
-          <ion-label>{{'Select objects' | translate}}</ion-label>
-        </ion-segment-button>
-      </ion-segment>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-grid>
-        <ion-row *ngIf="toShow == 'overview'">
-          <ion-col>
-            <ion-item>
-              <ion-label position="stacked">{{'name' | translate}}</ion-label>
-              <ion-input [(ngModel)]=installationSet.name name="name" required></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label position="stacked">{{'description' | translate}}</ion-label>
-              <ion-input [(ngModel)]=installationSet.description name="description" required></ion-input>
-            </ion-item>
-          </ion-col>
-          <ion-col>
-            <ion-item>
-              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="softwaresFilterChanged()"
-                id="softwaresFilter"></ion-input>
-            </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              id="softwaresTable" [rowData]="softwares" [columnDefs]="softwareColumnDefs" rowSelection="multiple"
-              [context]="context" (gridReady)="softwaresReady($event)" (selectionChanged)="softwaresChanged()">
-            </ag-grid-angular>
-          </ion-col>
-          <ion-col *ngIf="hwconfs.length > 0">
-            <ion-item>
-              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="hwconfsFilterChanged()"
-                id="hwconfsFilter"></ion-input>
-            </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              id="hwconfsTable" [rowData]="hwconfs" [columnDefs]="hwconfColumnDefs" rowSelection="multiple"
-              [context]="context" (gridReady)="hwconfsReady($event)" (selectionChanged)="hwconfsChanged()">
-            </ag-grid-angular>
-          </ion-col>
-          <ion-col *ngIf="rooms.length > 0">
-            <ion-item>
-              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="roomsFilterChanged()"
-                id="roomsFilter"></ion-input>
-            </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              id="roomsTable" [rowData]="rooms" [columnDefs]="roomColumnDefs" rowSelection="multiple"
-              [context]="context" (gridReady)="roomsReady($event)" (selectionChanged)="roomsChanged()">
-            </ag-grid-angular>
-          </ion-col>
-          <ion-col *ngIf="devices.length > 0">
-            <ion-item>
-              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="devicesFilterChanged()"
-                id="devicesFilter"></ion-input>
-            </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              id="devicesTable" [rowData]="devices" [columnDefs]="deviceColumnDefs" rowSelection="multiple"
-              [context]="context" (gridReady)="devicesReady($event)" (selectionChanged)="devicesChanged()">
-            </ag-grid-angular>
-          </ion-col>
-        </ion-row>
-        <ion-row *ngIf="toShow == 'selectObjects'">
-          <ion-col>
-            <ion-item>
-              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="availableSoftwaresFilterChanged()"
-                id="availableSoftwaresFilter"></ion-input>
-            </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              id="availableSoftwaresTable" [rowData]="softwareService.availableSoftwares"
-              [columnDefs]="softwareColumnDefs" rowSelection="multiple" rowMultiSelectWithClick="true"
-              [context]="context" (gridReady)="availableSoftwaresReady($event)"
-              (selectionChanged)="availableSoftwaresChanged()">
-            </ag-grid-angular>
-          </ion-col>
-          <ion-col>
-            <ion-item>
-              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="availableHwconfsFilterChanged()"
-                id="availableHwconfsFilter"></ion-input>
-            </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              id="availableHwconfsTable" [rowData]="availableHwconfs" [columnDefs]="hwconfColumnDefs"
-              rowSelection="multiple" rowMultiSelectWithClick="true" [context]="context"
-              (gridReady)="availableHwconfsReady($event)" (selectionChanged)="availableHwconfsChanged()">
-            </ag-grid-angular>
-          </ion-col>
-          <ion-col>
-            <ion-item>
-              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="availableRoomsFilterChanged()"
-                id="availableRoomsFilter"></ion-input>
-            </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              id="availableRoomsTable" [rowData]="availableRooms" [columnDefs]="roomColumnDefs" rowSelection="multiple"
-              rowMultiSelectWithClick="true" [context]="context" (gridReady)="availableRoomsReady($event)"
-              (selectionChanged)="availableRoomsChanged()">
-            </ag-grid-angular>
-          </ion-col>
-          <ion-col>
-            <ion-item>
-              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="availableDevicesFilterChanged()"
-                id="availableDevicesFilter"></ion-input>
-            </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              id="availableDevicesTable" [rowData]="availableDevices" [columnDefs]="deviceColumnDefs"
-              rowSelection="multiple" rowMultiSelectWithClick="true" [context]="context"
-              (gridReady)="availableDevicesReady($event)" (selectionChanged)="availableDevicesChanged()">
-            </ag-grid-angular>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-card-content>
-  </ion-card>>
+  <ion-content id="editSoftware">
+    <ion-grid>
+      <ion-row *ngIf="toShow == 'overview'">
+        <ion-col size=12 sizeMd=3 sizeLg=3 sizeXl=3>
+          <ion-item>
+            <ion-label position="stacked">{{'name' | translate}}</ion-label>
+            <ion-input [(ngModel)]=installationSet.name name="name" required></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="stacked">{{'description' | translate}}</ion-label>
+            <ion-input [(ngModel)]=installationSet.description name="description" required></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col size=12 sizeMd=2 sizeLg=2 sizeXl=2>
+          <ion-item>
+            <ion-input type="text" placeholder="{{'search' | translate }}" (input)="softwaresFilterChanged()"
+              id="softwaresFilter"></ion-input>
+          </ion-item>
+          <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
+            id="softwaresTable" [rowData]="softwares" [columnDefs]="softwareColumnDefs" rowSelection="multiple"
+            [context]="context" (gridReady)="softwaresReady($event)" (selectionChanged)="softwaresChanged()">
+          </ag-grid-angular>
+        </ion-col>
+        <ion-col *ngIf="hwconfs.length > 0" size=12 sizeMd=2 sizeLg=2 sizeXl=2>
+          <ion-item>
+            <ion-input type="text" placeholder="{{'search' | translate }}" (input)="hwconfsFilterChanged()"
+              id="hwconfsFilter"></ion-input>
+          </ion-item>
+          <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
+            id="hwconfsTable" [rowData]="hwconfs" [columnDefs]="hwconfColumnDefs" rowSelection="multiple"
+            [context]="context" (gridReady)="hwconfsReady($event)" (selectionChanged)="hwconfsChanged()">
+          </ag-grid-angular>
+        </ion-col>
+        <ion-col *ngIf="rooms.length > 0" size=12 sizeMd=2 sizeLg=2 sizeXl=2>
+          <ion-item>
+            <ion-input type="text" placeholder="{{'search' | translate }}" (input)="roomsFilterChanged()"
+              id="roomsFilter"></ion-input>
+          </ion-item>
+          <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
+            id="roomsTable" [rowData]="rooms" [columnDefs]="roomColumnDefs" rowSelection="multiple" [context]="context"
+            (gridReady)="roomsReady($event)" (selectionChanged)="roomsChanged()">
+          </ag-grid-angular>
+        </ion-col>
+        <ion-col *ngIf="devices.length > 0" size=12 sizeMd=2 sizeLg=2 sizeXl=2>
+          <ion-item>
+            <ion-input type="text" placeholder="{{'search' | translate }}" (input)="devicesFilterChanged()"
+              id="devicesFilter"></ion-input>
+          </ion-item>
+          <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
+            id="devicesTable" [rowData]="devices" [columnDefs]="deviceColumnDefs" rowSelection="multiple"
+            [context]="context" (gridReady)="devicesReady($event)" (selectionChanged)="devicesChanged()">
+          </ag-grid-angular>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="toShow == 'selectObjects'">
+        <ion-col size=12 sizeMd=3 sizeLg=3 sizeXl=3>
+          <ion-item>
+            <ion-input type="text" placeholder="{{'search' | translate }}" (input)="availableSoftwaresFilterChanged()"
+              id="availableSoftwaresFilter"></ion-input>
+          </ion-item>
+          <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
+            id="availableSoftwaresTable" [rowData]="softwareService.availableSoftwares"
+            [columnDefs]="softwareColumnDefs" rowSelection="multiple" rowMultiSelectWithClick="true" [context]="context"
+            (gridReady)="availableSoftwaresReady($event)" (selectionChanged)="availableSoftwaresChanged()">
+          </ag-grid-angular>
+        </ion-col>
+        <ion-col size=12 sizeMd=3 sizeLg=3 sizeXl=3>
+          <ion-item>
+            <ion-input type="text" placeholder="{{'search' | translate }}" (input)="availableHwconfsFilterChanged()"
+              id="availableHwconfsFilter"></ion-input>
+          </ion-item>
+          <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
+            id="availableHwconfsTable" [rowData]="availableHwconfs" [columnDefs]="hwconfColumnDefs"
+            rowSelection="multiple" rowMultiSelectWithClick="true" [context]="context"
+            (gridReady)="availableHwconfsReady($event)" (selectionChanged)="availableHwconfsChanged()">
+          </ag-grid-angular>
+        </ion-col>
+        <ion-col size=12 sizeMd=3 sizeLg=3 sizeXl=3>
+          <ion-item>
+            <ion-input type="text" placeholder="{{'search' | translate }}" (input)="availableRoomsFilterChanged()"
+              id="availableRoomsFilter"></ion-input>
+          </ion-item>
+          <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
+            id="availableRoomsTable" [rowData]="availableRooms" [columnDefs]="roomColumnDefs" rowSelection="multiple"
+            rowMultiSelectWithClick="true" [context]="context" (gridReady)="availableRoomsReady($event)"
+            (selectionChanged)="availableRoomsChanged()">
+          </ag-grid-angular>
+        </ion-col>
+        <ion-col size=12 sizeMd=3 sizeLg=3 sizeXl=3>
+          <ion-item>
+            <ion-input type="text" placeholder="{{'search' | translate }}" (input)="availableDevicesFilterChanged()"
+              id="availableDevicesFilter"></ion-input>
+          </ion-item>
+          <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
+            id="availableDevicesTable" [rowData]="availableDevices" [columnDefs]="deviceColumnDefs"
+            rowSelection="multiple" rowMultiSelectWithClick="true" [context]="context"
+            (gridReady)="availableDevicesReady($event)" (selectionChanged)="availableDevicesChanged()">
+          </ag-grid-angular>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
+</form>
