--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -88,8 +88,8 @@
         <ion-button fill="clear" (click)="redirectToGroups(object)">
           <ion-icon name="people"></ion-icon>
         </ion-button>
-        <ion-button fill="clear" (click)="redirectToEdit(object)">
-          <ion-icon name="build-sharp"></ion-icon>
+        <ion-button fill="clear" (click)="openActions($event,object)">
+          <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
         </ion-button>
       </ion-item-options>
     </ion-item-sliding>
